fix button overflow on mobile

--- a/frontend/src/components/recipe-list/RecipeList.css
+++ b/frontend/src/components/recipe-list/RecipeList.css
@@ -263,8 +263,8 @@
   }
 }
 
-@media (max-height: 750px) {
+/* @media (max-height: 750px) {
   .recipe-list {
     height: 40vh;
   }
-}
+} */
